k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-landing-page
spec:
  selector:
    matchLabels:
      app: simple-landing-page
  template:
    metadata:
      labels:
        app: simple-landing-page
    spec:
      containers:
        - image: ghcr.io/la-cc/simple-landing-page:0.0.1
          name: nginx
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
