k8s/base/service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-landing-page-clusterip
spec:
  selector:
    app: simple-landing-page
  ports:
    - port: 8080
      targetPort: 80
